crates/sgf-core/tests/snapshots/ops_add_special_system/add_trappist_4_4.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added NAME_Trappist (#791) at (433.43269, -205.48736) with 8 bodies and 1 lane
touched: [217, 791]
inverse: RemoveSystem { id: 791 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -44220,6 +44220,11 @@
 				length=18
 			}
  
+			{
+				to=791
+				length=43
+			}
+ 
 		}
 		asteroid_belts=
 		{
@@ -82543,6 +82548,48 @@
 		index=0
 		storm=4294967295
 	}
+	791=
+	{
+		coordinate=
+		{
+			x=433.43269
+			y=-205.48736
+			origin=4294967295
+			visual_height=4.31213
+		}
+		name=
+		{
+			key="NAME_Trappist"
+		}
+		planet=8403
+		planet=8404
+		planet=8405
+		planet=8406
+		planet=8407
+		planet=8408
+		planet=8409
+		planet=8410
+		star_class="sc_m"
+		hyperlane=
+		{
+			
+			{
+				to=217
+				length=43
+			}
+ 
+		}
+		initializer="trappist_initializer"
+		inner_radius=150
+		outer_radius=250
+		starbases=
+		{
+			4294967295 
+		}
+		sector=4294967295
+		index=0
+		storm=4294967295
+	}
 }
 starbase_mgr=
 {
@@ -530216,6 +530263,361 @@
 				4988 
 			}
 		}
+		8403=
+		{
+			planet_class="pc_m_star"
+			planet_size=20
+			carrier_binary_flags=3
+			name=
+			{
+				key="NAME_Trappist"
+			}
+			coordinate=
+			{
+				x=0
+				y=0
+				origin=791
+			}
+			orbit=0
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		8404=
+		{
+			planet_class="pc_molten"
+			planet_size=16
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Trappist"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=19.31852
+				y=5.17638
+				origin=791
+			}
+			orbit=20
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8405=
+		{
+			planet_class="pc_barren"
+			planet_size=16
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Trappist"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="II"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-6.25133
+				y=35.45308
+				origin=791
+			}
+			orbit=36
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8406=
+		{
+			planet_class="pc_toxic"
+			planet_size=12
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Trappist"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="III"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-45.03332
+				y=-26
+				origin=791
+			}
+			orbit=52
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8407=
+		{
+			planet_class="pc_barren"
+			planet_size=14
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Trappist"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="IV"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=61.62893
+				y=-28.73804
+				origin=791
+			}
+			orbit=68
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			timed_modifier=
+			{
+				items=
+				{
+					
+					{
+						modifier="terraforming_candidate"
+						days=-1
+					}
+ 
+				}
+			}
+			entity=1
+		}
+		8408=
+		{
+			planet_class="pc_continental"
+			planet_size=16
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Trappist"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="V"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=64.34773
+				y=53.99416
+				origin=791
+			}
+			orbit=84
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=2
+		}
+		8409=
+		{
+			planet_class="pc_barren_cold"
+			planet_size=18
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Trappist"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="VI"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=-100
+				origin=791
+			}
+			orbit=100
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			timed_modifier=
+			{
+				items=
+				{
+					
+					{
+						modifier="terraforming_candidate"
+						days=-1
+					}
+ 
+				}
+			}
+			entity=1
+		}
+		8410=
+		{
+			planet_class="pc_frozen"
+			planet_size=12
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="NAME_Trappist"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="VII"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-105.1317
+				y=49.02372
+				origin=791
+			}
+			orbit=116
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
 	}
 }
 astral_rifts=
@@ -954250,7 +954652,7 @@
 {
 }
 last_created_country=56
-last_created_system=790
+last_created_system=791
 leaders=
 {
 	419430400=
@@ -978901,7 +979303,7 @@
 {
 	count=
 	{
-		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 7 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 
+		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 7 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 
 	}
 	initializer=
 	{
