crates/sgf-core/tests/snapshots/ops_add_special_system/add_wenkwort_4_4.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added Sgf_Wenkwort (#791) at (433.43269, -205.48736) with 6 bodies and 1 lane
touched: [217, 791]
inverse: RemoveSystem { id: 791 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -44220,6 +44220,11 @@
 				length=18
 			}
  
+			{
+				to=791
+				length=43
+			}
+ 
 		}
 		asteroid_belts=
 		{
@@ -82543,6 +82548,46 @@
 		index=0
 		storm=4294967295
 	}
+	791=
+	{
+		coordinate=
+		{
+			x=433.43269
+			y=-205.48736
+			origin=4294967295
+			visual_height=4.31213
+		}
+		name=
+		{
+			key="Sgf_Wenkwort"
+		}
+		planet=8403
+		planet=8404
+		planet=8405
+		planet=8406
+		planet=8407
+		planet=8408
+		star_class="sc_f"
+		hyperlane=
+		{
+			
+			{
+				to=217
+				length=43
+			}
+ 
+		}
+		initializer="wenkwort_initializer"
+		inner_radius=170
+		outer_radius=270
+		starbases=
+		{
+			4294967295 
+		}
+		sector=4294967295
+		index=0
+		storm=4294967295
+	}
 }
 starbase_mgr=
 {
@@ -530216,6 +530261,283 @@
 				4988 
 			}
 		}
+		8403=
+		{
+			planet_class="pc_f_star"
+			planet_size=24
+			carrier_binary_flags=3
+			name=
+			{
+				key="STAR_NAME_1_OF_1"
+				variables=
+				{
+					
+					{
+						key="NAME"
+						value=
+						{
+							key="Sgf_Wenkwort"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=0
+				origin=791
+			}
+			orbit=0
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
+		8404=
+		{
+			planet_class="pc_molten"
+			planet_size=12
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Sgf_Wenkwort"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-44.31635
+				y=7.81417
+				origin=791
+			}
+			orbit=45
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8405=
+		{
+			planet_class="pc_tropical"
+			planet_size=18
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Sgf_Wenkwort"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="II"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=40
+				y=69.28203
+				origin=791
+			}
+			orbit=80
+			last_bombardment=			"0.01.01"
+			moons=
+			{
+				8406 8407 
+			}
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			timed_modifier=
+			{
+				items=
+				{
+					
+					{
+						modifier="pm_wenkwort_gardens"
+						days=-1
+					}
+ 
+				}
+			}
+			entity=1
+		}
+		8406=
+		{
+			planet_class="pc_barren"
+			planet_size=8
+			carrier_binary_flags=1
+			name=
+			{
+				key="NAME_wenkwort_moon"
+			}
+			binary_flags=577
+			coordinate=
+			{
+				x=50.3923
+				y=75.28203
+				origin=791
+			}
+			orbit=12
+			last_bombardment=			"0.01.01"
+			moon_of=8405
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8407=
+		{
+			planet_class="pc_frozen"
+			planet_size=6
+			carrier_binary_flags=1
+			name=
+			{
+				key="SUBPLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="PLANET_NAME_FORMAT"
+							variables=
+							{
+								
+								{
+									key="PARENT"
+									value=
+									{
+										key="Sgf_Wenkwort"
+									}
+								}
+ 
+								{
+									key="NUMERAL"
+									value=
+									{
+										key="II"
+										literal=yes
+									}
+								}
+ 
+							}
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="a"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=21.20615
+				y=62.44163
+				origin=791
+			}
+			orbit=20
+			last_bombardment=			"0.01.01"
+			moon_of=8405
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		8408=
+		{
+			planet_class="pc_gas_giant"
+			planet_size=24
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Sgf_Wenkwort"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="III"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=66
+			coordinate=
+			{
+				x=-47.88282
+				y=-131.55697
+				origin=791
+			}
+			orbit=140
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			entity_name="gas_giant_02_entity"
+		}
 	}
 }
 astral_rifts=
@@ -954250,7 +954572,7 @@
 {
 }
 last_created_country=56
-last_created_system=790
+last_created_system=791
 leaders=
 {
 	419430400=
@@ -978901,7 +979223,7 @@
 {
 	count=
 	{
-		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 7 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 
+		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 7 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 2 1 1 1 1 1 1 
 	}
 	initializer=
 	{
