crates/sgf-core/tests/snapshots/ops_add_special_system/add_wenkwort_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added Sgf Wenkwort #601 at (-292.23404, -137.62265) with 6 bodies and 1 lane
touched: [169, 601]
inverse: RemoveSystem { system: 601 }
… and 3 other issues

--- gamestate
+++ gamestate
@@ -41044,6 +41044,11 @@
 				length=24
 			}
  
+			{
+				to=601
+				length=44
+			}
+ 
 		}
 		arm=1
 		flags=
@@ -71403,6 +71408,46 @@
 		index=0
 		storm=4294967295
 	}
+	601=
+	{
+		coordinate=
+		{
+			x=-292.23404
+			y=-137.62265
+			origin=4294967295
+			visual_height=3.65056
+		}
+		name=
+		{
+			key="Sgf_Wenkwort"
+		}
+		planet=16777273
+		planet=6375
+		planet=6376
+		planet=6377
+		planet=6378
+		planet=6379
+		star_class="sc_f"
+		hyperlane=
+		{
+			
+			{
+				to=169
+				length=44
+			}
+ 
+		}
+		initializer="wenkwort_initializer"
+		inner_radius=170
+		outer_radius=270
+		starbases=
+		{
+			4294967295 
+		}
+		sector=4294967295
+		index=0
+		storm=4294967295
+	}
 }
 starbase_mgr=
 {
@@ -82369,7 +82414,41 @@
 				128 
 			}
 		}
-		57=none
+		16777273=
+		{
+			planet_class="pc_f_star"
+			planet_size=24
+			carrier_binary_flags=3
+			name=
+			{
+				key="STAR_NAME_1_OF_1"
+				variables=
+				{
+					
+					{
+						key="NAME"
+						value=
+						{
+							key="Sgf_Wenkwort"
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=0
+				y=0
+				origin=601
+			}
+			orbit=0
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+		}
 		58=
 		{
 			colony=30
@@ -411928,6 +412007,248 @@
 				4047 
 			}
 		}
+		6375=
+		{
+			planet_class="pc_molten"
+			planet_size=12
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Sgf_Wenkwort"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="I"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=-44.31635
+				y=7.81417
+				origin=601
+			}
+			orbit=45
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		6376=
+		{
+			planet_class="pc_tropical"
+			planet_size=18
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Sgf_Wenkwort"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="II"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			coordinate=
+			{
+				x=40
+				y=69.28203
+				origin=601
+			}
+			orbit=80
+			last_bombardment=			"0.01.01"
+			moons=
+			{
+				6377 6378 
+			}
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			timed_modifier=
+			{
+				items=
+				{
+					
+					{
+						modifier="pm_wenkwort_gardens"
+						days=-1
+					}
+ 
+				}
+			}
+			entity=1
+		}
+		6377=
+		{
+			planet_class="pc_barren"
+			planet_size=8
+			carrier_binary_flags=1
+			name=
+			{
+				key="NAME_wenkwort_moon"
+			}
+			binary_flags=577
+			coordinate=
+			{
+				x=50.3923
+				y=75.28203
+				origin=601
+			}
+			orbit=12
+			last_bombardment=			"0.01.01"
+			moon_of=6376
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		6378=
+		{
+			planet_class="pc_frozen"
+			planet_size=6
+			carrier_binary_flags=1
+			name=
+			{
+				key="SUBPLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="PLANET_NAME_FORMAT"
+							variables=
+							{
+								
+								{
+									key="PARENT"
+									value=
+									{
+										key="Sgf_Wenkwort"
+									}
+								}
+ 
+								{
+									key="NUMERAL"
+									value=
+									{
+										key="II"
+										literal=yes
+									}
+								}
+ 
+							}
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="a"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=576
+			coordinate=
+			{
+				x=21.20615
+				y=62.44163
+				origin=601
+			}
+			orbit=20
+			last_bombardment=			"0.01.01"
+			moon_of=6376
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=1
+		}
+		6379=
+		{
+			planet_class="pc_gas_giant"
+			planet_size=24
+			carrier_binary_flags=1
+			name=
+			{
+				key="PLANET_NAME_FORMAT"
+				variables=
+				{
+					
+					{
+						key="PARENT"
+						value=
+						{
+							key="Sgf_Wenkwort"
+						}
+					}
+ 
+					{
+						key="NUMERAL"
+						value=
+						{
+							key="III"
+							literal=yes
+						}
+					}
+ 
+				}
+			}
+			binary_flags=66
+			coordinate=
+			{
+				x=-47.88282
+				y=-131.55697
+				origin=601
+			}
+			orbit=140
+			last_bombardment=			"0.01.01"
+			planet_orbitals=
+			{
+			}
+			bombardment_damage=0
+			entity=0
+			entity_name="gas_giant_02_entity"
+		}
 	}
 }
 astral_rifts=
@@ -692049,7 +692370,7 @@
 {
 }
 last_created_country=55
-last_created_system=600
+last_created_system=601
 leaders=
 {
 	285212672=
@@ -709170,7 +709491,7 @@
 {
 	count=
 	{
-		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 1 1 1 1 1 1 1 1 1 8 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 
+		1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 15 1 1 1 1 1 1 1 1 1 1 1 1 1 8 1 1 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 2 1 1 1 1 1 1 1 1 2 1 1 1 1 1 1 1 1 1 1 1 1 1 
 	}
 	initializer=
 	{
